feat: Implemented CommandFactory & InputController